--- a/.gitignore
+++ b/.gitignore
@@ -103,6 +103,9 @@ fabric.properties
 *.tar.gz
 *.rar
 
+# Useless files from MacOS
+.DS_Store
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
