--- a/Docker-Compose-Tests/docker-compose.yml
+++ b/Docker-Compose-Tests/docker-compose.yml
@@ -9,8 +9,8 @@ services:
       - POSTGRES_USER=postgres
     ports:
       - 5432:5432
-    # adminer:
-    #   image: adminer
-    #   restart: always
-    #   ports:
-    #     - 8080:5555
+  adminer:
+    image: adminer
+    restart: always
+    ports:
+      - 8080:5555
