--- a/Docker-Compose-Tests/DatabaseTest/src/main/resources/application.properties
+++ b/Docker-Compose-Tests/DatabaseTest/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/database
+spring.datasource.url=jdbc:postgresql://localhost:5432/
 spring.datasource.username=postgres
 spring.datasource.password=mysecretpassword
