--- a/Docker-Compose-Tests/DatabaseInitializer/build.gradle
+++ b/Docker-Compose-Tests/DatabaseInitializer/build.gradle
@@ -23,6 +23,7 @@ repositories {
 }
 
 dependencies {
+	compile("org.springframework.boot:spring-boot-starter-data-jpa")
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	runtimeOnly 'org.springframework.boot:spring-boot-devtools'
