DatabaseInitializer can now print the Names and Size of the database from persons

--- a/Docker-Compose-Tests/DatabaseInitializer/src/main/resources/application.properties
+++ b/Docker-Compose-Tests/DatabaseInitializer/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.jpa.hibernate.ddl-auto=create-drop
 logging.level.ROOT=ERROR
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+server.port=8085
