--- a/Docker-Compose-Tests/DatabaseInitializer/src/main/resources/application.properties
+++ b/Docker-Compose-Tests/DatabaseInitializer/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/
+spring.datasource.url=jdbc:postgresql://database:5432/
 spring.datasource.username=postgres
 spring.datasource.password=mysecretpassword
 
