Change .gitignore, .travis.yml, update gradle wrapper
Change .gitignore again

Change .travis.yml to use gradlew instead of gradle

Add new .travis.yml-file to all subdirectories

change .travis.yml yet again

change .travis.yml, hopefully with the right script this time

update .gitignore and .travis.yml, gradle wrappers and refactor folder names and method names

change .gitignore and .travis.yml yet again

change .gitignore and .travis.yml yet again

update gradle wrapper files

change .travis.yml to stop sending emails

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,12 @@
 language: java
-
-dist: trusty
-
-branches:
-  only:
-  - master
-
 jdk:
  - openjdk8
-
-addons:
- sonarcloud:
-  organization: "davemithut-github"
-   token:
-    secure: SONAR_TOKEN
-
 script:
  - cd Artikel
- # run / test
+ - ./gradlew build
  - cd ../Benutzer
- # run / test
+ - ./gradlew build
  - cd ../Ausleihe
- # run / test
-
+ - ./gradlew build
 notifications:
- email: false
+ - email: false
