--- a/Artikel/.travis.yml
+++ b/Artikel/.travis.yml
@@ -1,13 +1,12 @@
 language: java
-branches:
-  only:
-  - master
 jdk:
  - openjdk8
 script:
  - cd Artikel
- # run / test
+ - ./gradlew build
  - cd ../Benutzer
- # run / test
+ - ./gradlew build
  - cd ../Ausleihe
- # run / test
+ - ./gradlew build
+notifications:
+ - email: false
