Change .gitignore again

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,12 @@
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
-# User-specific stuff
+# Specific stuff
+Artikel/build/
+Ausleihe/build/
+Benutzer/build/
+
+# IntelliJ Folder
 .idea/
 
 # Gradle folder
