--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,11 @@ jdk:
  - openjdk8
 script:
  - cd Artikel
- - gradle build
+ - gradle wrapper
+ - ./gradlew build
  - cd ../Benutzer
- - gradle build
+ - gradle wrapper
+ - ./gradlew build
  - cd ../Ausleihe
- - gradle build
+ - gradle wrapper
+ - ./gradlew build
