--- a/Docker-Compose-Tests/DatabaseTest/src/main/resources/application.properties
+++ b/Docker-Compose-Tests/DatabaseTest/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port=8085
 
-spring.datasource.url=jdbc:postgresql://database:5432/
+#spring.datasource.url=jdbc:postgresql://database:5432/
+spring.datasource.url=jdbc:postgresql://localhost:5432/
 spring.datasource.username=postgres
 spring.datasource.password=mysecretpassword
 
