added a get/post-Controller and a website to add a new personobject to the database

--- a/Docker-Compose-Tests/DatabaseInitializer/src/main/resources/application.properties
+++ b/Docker-Compose-Tests/DatabaseInitializer/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.datasource.url=jdbc:postgresql://database:5432/
+#spring.datasource.url=jdbc:postgresql://database:5432/
+spring.datasource.url=jdbc:postgresql://localhost:5432/
 spring.datasource.username=postgres
 spring.datasource.password=mysecretpassword
 
@@ -9,3 +10,5 @@ spring.jpa.hibernate.ddl-auto=create-drop
 logging.level.ROOT=ERROR
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+server.port=8085
