--- a/Docker-Compose-Tests/DatabaseInitializer/src/main/resources/application.properties
+++ b/Docker-Compose-Tests/DatabaseInitializer/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:postgresql://database:5432/
-#spring.datasource.url=jdbc:postgresql://localhost:5432/
+#spring.datasource.url=jdbc:postgresql://database:5432/
+spring.datasource.url=jdbc:postgresql://localhost:5432/
 spring.datasource.username=postgres
 spring.datasource.password=mysecretpassword
 
@@ -11,4 +11,3 @@ logging.level.ROOT=ERROR
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-server.port=8085
