--- a/Artikel/build.gradle
+++ b/Artikel/build.gradle
@@ -10,6 +10,10 @@ buildscript {
 	}
 }
 
+plugins {
+  id "com.github.spotbugs" version "1.6.9"
+}
+
 apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
@@ -36,4 +40,11 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+}
+
+tasks.withType(com.github.spotbugs.SpotBugsTask) {
+  reports {
+    xml.enabled false
+    html.enabled true
+  }
 }
