--- a/Artikel/.gitignore
+++ b/Artikel/.gitignore
@@ -6,10 +6,15 @@
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
-# User-specific stuff
-.idea/
+# Specific stuff
+Artikel/build/
+Lending/build/
+Benutzer/build/
 .settings/
-.project
+build/
+
+# IntelliJ Folder
+.idea/
 
 # Gradle folder
 .gradle/
