--- a/Docker-Compose-Tests/DatabaseInitializer/Dockerfile
+++ b/Docker-Compose-Tests/DatabaseInitializer/Dockerfile
@@ -7,6 +7,8 @@ FROM openjdk:8-jre-alpine
 RUN apk add --no-cache bash
 WORKDIR /DatabaseWorkDir
 
+COPY ./wait-for-it.sh .
+
 COPY --from=build /DatabaseWorkDir/build/libs/*.jar app.jar
 
 CMD java -jar app.jar
