--- a/Docker-Compose-Tests/docker-compose.yml
+++ b/Docker-Compose-Tests/docker-compose.yml
@@ -39,7 +39,7 @@ services:
       dockerfile: ./Dockerfile
     # ports:
     #   - 8085:8080
-
+    command: ["./wait-for-it.sh", "database:5432", "--", "java", "-jar", "app.jar"]
     networks:
       - web
     depends_on:
