--- a/Artikel/build.gradle
+++ b/Artikel/build.gradle
@@ -10,6 +10,11 @@ buildscript {
 	}
 }
 
+plugins {
+	id "com.github.spotbugs" version "1.6.9"
+        id "org.sonarqube" version "2.2"
+}
+
 apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
@@ -37,3 +42,12 @@ dependencies {
 	testImplementation 'io.projectreactor:reactor-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 }
+
+sonarqube {
+    properties {
+        property "sonar.ArticleSCS"
+        property "sonar.ArticleKey"
+    }
+}
+
+
