--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,10 @@ jdk:
 jobs:
  include:
  - stage: Artikel
- - script: cd Artikel
- - script: ./gradlew build
+   script: cd Artikel && ./gradlew build
  - stage: Benutzer
- - script: cd ../Benutzer
- - script: ./gradlew build
+   script: cd ../Benutzer && ./gradlew build
  - stage: Ausleihe
- - script: cd ../Ausleihe
- - script: ./gradlew build
+   script: cd ../Ausleihe && ./gradlew build
 notifications:
  - email: false
