update build.gradle and .travis.yml

--- a/Artikel/build.gradle
+++ b/Artikel/build.gradle
@@ -40,11 +40,5 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
 	testImplementation 'org.springframework.security:spring-security-test'
-}
-
-tasks.withType(com.github.spotbugs.SpotBugsTask) {
-  reports {
-    xml.enabled false
-    html.enabled true
-  }
+        annotationProcessor 'org.projectlombok:lombok:1.18.6'
 }
