--- a/Benutzer/build.gradle
+++ b/Benutzer/build.gradle
@@ -11,8 +11,7 @@ buildscript {
 }
 
 plugins {
-	id "com.github.spotbugs" version "1.6.9"
-        id "org.sonarqube" version "2.2"
+  id "com.github.spotbugs" version "1.6.9"
 }
 
 apply plugin: 'java'
@@ -41,13 +40,5 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+        annotationProcessor 'org.projectlombok:lombok:1.18.6'
 }
-
-sonarqube {
-    properties {
-        property "sonar.UserSCS"
-        property "sonar.UserKey"
-    }
-}
-
-
