--- a/Artikel/.travis.yml
+++ b/Artikel/.travis.yml
@@ -6,8 +6,8 @@ jobs:
  - stage: Artikel
    script: cd Artikel && ./gradlew build
  - stage: Benutzer
-   script: cd ../Benutzer && ./gradlew build
+   script: cd Benutzer && ./gradlew build
  - stage: Ausleihe
-   script: cd ../Ausleihe && ./gradlew build
+   script: cd Ausleihe && ./gradlew build
 notifications:
  - email: false
