Fixed something in "create user"

--- a/Login-service/Loginservice/loginservice/src/main/resources/application.properties
+++ b/Login-service/Loginservice/loginservice/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 #Database H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 spring.datasource.data-username=sa
 spring.datasource.data-password=
 spring.jpa.hibernate.ddl-auto=create-drop
