--- a/Lending/build.gradle
+++ b/Lending/build.gradle
@@ -38,6 +38,7 @@ dependencies {
 	runtimeOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'org.postgresql:postgresql'
+	compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.7'
 	compileOnly 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
