--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ jobs:
    script: cd Artikel && ./gradlew build
  - stage: Benutzer
    script: cd Benutzer && ./gradlew build
- - stage: Ausleihe
-   script: cd Ausleihe && ./gradlew build
+ - stage: Lendings
+   script: cd Lendings && ./gradlew build
 notifications:
  - email: false
