--- a/Docker-Compose-Tests/.travis.yml
+++ b/Docker-Compose-Tests/.travis.yml
@@ -1,3 +1,13 @@
 language: java
 jdk:
  - openjdk8
+jobs:
+ include:
+ - stage: Artikel
+   script: cd Artikel && ./gradlew build
+ - stage: Benutzer
+   script: cd Benutzer && ./gradlew build
+ - stage: Lendings
+   script: cd Lendings && ./gradlew build
+notifications:
+ - email: false
