--- a/Lending/.travis.yml
+++ b/Lending/.travis.yml
@@ -1,12 +1,13 @@
 language: java
 jdk:
-  - openjdk8
-script:
-  - cd Artikel
-  - ./gradlew build
-  - cd ../Benutzer
-  - ./gradlew build
-  - cd ../Lending
-  - ./gradlew build
+ - openjdk8
+jobs:
+ include:
+ - stage: Artikel
+   script: cd Artikel && ./gradlew build
+ - stage: Benutzer
+   script: cd Benutzer && ./gradlew build
+ - stage: Lendings
+   script: cd Lendings && ./gradlew build
 notifications:
-  - email: false
+ - email: false
