--- a/RhinoshareApp/rhinoshareapp/src/main/resources/application-dev.properties
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/application-dev.properties
@@ -6,7 +6,7 @@ spring.datasource.data-username=sa
 spring.datasource.data-password=
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.datasource.url=jdbc:h2:file:~/UserService
+spring.datasource.url=jdbc:h2:mem:~/UserService
 
 server.port=8080
 
