Combined the overview of conflicts with detail view

--- a/RhinoshareApp/rhinoshareapp/src/main/resources/application-prod.properties
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=create-drop
 logging.level.ROOT=ERROR
-spring.datasource.url=jdbc:postgresql://database:5432/
+spring.datasource.url=jdbc:postgresql://database:5432/database
 spring.datasource.username=rhinoshare
 spring.datasource.password=rhinoshare_default
 
