--- a/RhinoshareApp/docker-compose.yml
+++ b/RhinoshareApp/docker-compose.yml
@@ -1,24 +1,13 @@
 version: "3.5"
 services:
 
-  # proxy:
-  #   image: nginx:1.15-alpine
-  #   ports:
-  #     - "8080:8080"
-  #   volumes:
-  #     - ./proxy/conf/nginx.conf:/etc/nginx/nginx.conf:ro
-  #     - ./proxy/conf/domain.conf:/etc/nginx/domain.conf:ro
-  #   depends_on:
-  #     - rhinoshareapp
-  #     - database
-
   rhinoshareapp:
     build:
       context: ./rhinoshareapp
       dockerfile: ./Dockerfile
     ports:
       - "8080:8080"
-    command: ["./wait-for-it.sh", "database:5432", "--", "java", "-jar", "app.jar"]
+    command: ["./wait-for-it.sh", "database:5432", "propay:8888", "--", "java", "-jar", "app.jar"]
     depends_on:
       - database
 
@@ -32,6 +21,7 @@ services:
       - ./data:/code/data
     depends_on:
       - database
+      - rhinoshareapp
 
   database:
     image: postgres
