--- a/RhinoshareApp/rhinoshareapp/build.gradle
+++ b/RhinoshareApp/rhinoshareapp/build.gradle
@@ -27,7 +27,7 @@ repositories {
 }
 
 dependencies {
-	compile 'com.google.code.findbugs:findbugs-annotations:3.0.1'
+	provided group: 'com.github.spotbugs', name: 'spotbugs-annotations', version: '3.1.11'
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
