docker-compose works, fixed bugs in image/article/repos/chatcontroller

--- a/RhinoshareApp/docker-compose.yml
+++ b/RhinoshareApp/docker-compose.yml
@@ -25,6 +25,8 @@ services:
 
   database:
     image: postgres
+    ports:
+      - "5432:5432"
     environment:
       - POSTGRES_PASSWORD=rhinoshare_default
       - POSTGRES_DB=database
