--- a/RhinoshareApp/rhinoshareapp/src/main/resources/application-prod.properties
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/application-prod.properties
@@ -1,8 +1,9 @@
 spring.jpa.hibernate.ddl-auto=create-drop
 logging.level.ROOT=ERROR
-spring.datasource.url=jdbc:postgresql://database:5432/database
-spring.datasource.username=rhinoshare
-spring.datasource.password=rhinoshare_default
+spring.datasource.url=jdbc:mariadb://database:3306/springboot_mariadb
+spring.datasource.username=root
+spring.datasource.password=example
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
