removed network from docker-compose

--- a/RhinoshareApp/rhinoshareapp/src/main/resources/application-prod.properties
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/application-prod.properties
@@ -5,7 +5,7 @@ spring.datasource.username=root
 spring.datasource.password=example
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
-logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.SQL=ERROR
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 spring.mail.host = smtp.gmail.com
