fixed database persistance

--- a/RhinoshareApp/rhinoshareapp/src/main/resources/application-prod.properties
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 logging.level.ROOT=ERROR
 spring.datasource.url=jdbc:mariadb://database:3306/springboot_mariadb
 spring.datasource.username=root
